update config